--- a/index.html
+++ b/index.html
@@ -34,19 +34,27 @@
                         <h2>150+</h2>
                     </div>
                     <div class="element">
-                        <small>HAPPY CLIENTS</small>
-                        <h2>100%</h2>
+                        <small>PROJECTS</small>
+                        <h2>400+</h2>
                     </div>
                 </div>
                 <div class="bottom">
                     <div class="element">
-                        <small>PROJECTS</small>
-                        <h2>400+</h2>
+                        <small>HAPPY CLIENTS</small>
+                        <h2>100%</h2>
                     </div>
                     <div class="element">
                         <small>FOLLOWER</small>
                         <h2>200K</h2>
                     </div>
+                </div>
+            </section>
+            <section class="view3">
+                <div class="top">
+<img src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d42ed21efba1c98e866246_studio-philosophy-p-2000.webp"
+>                  </div>
+                <div class="bottom">
+
                 </div>
             </section>
         </main>
