New section added

--- a/index.html
+++ b/index.html
@@ -51,12 +51,29 @@
             </section>
             <section class="view3">
                 <div class="top">
-<img src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d42ed21efba1c98e866246_studio-philosophy-p-2000.webp"
->                  </div>
-                <div class="bottom">
-
+                    <img
+                        src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d42ed21efba1c98e866246_studio-philosophy-p-2000.webp">
                 </div>
-            </section>
-        </main>
-    </body>
-</html>
+                <div class="bottom">
+                    <p id="our">OUR PHILOSOPHY</p>
+                    <div class="text">
+                        <h1><span id="uppercase">Putting Our Clients' Success First</span></h1>
+                        <p class="paragraph"><p>At our agency, we firmly believe in putting our clients' success first. We are dedicated to understanding their unique goals, challenges, and vision, and we tailor our services to meet their specific needs. Our </p><P>collaborative approach ensures that our clients receive personalized attention, exceptional service, and measurable results, fostering long-term partnerships built on trust and mutual success.</P></p>
+                    </div>
+                </section>
+                 <section class="view4">
+                <div class="top">
+                    <img
+                        src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbdadb9a66a436b50ff_sutdio-values-p-1600.webp">
+                </div>
+                <div class="bottom">
+                    <p id="our">OUR VISION</p>
+                    <div class="text">
+                        <h1><span id="uppercase">Setting the Standard for Excellence</span></h1>
+                        <p class="paragraph">
+                            <p>We are committed to setting the standard for excellence in everything we do. With a relentless pursuit of quality, innovation, and results, we strive to exceed expectations and deliver</p><p>exceptional outcomes for our clients. Our team of industry experts, combined with our unwavering dedication to excellence, positions us as a leader in the fashion agency landscape.</p> </p>
+                    </div>
+                </section>
+            </main>
+        </body>
+    </html>
