--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css"
+            rel="stylesheet" />
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -57,23 +60,65 @@
                 <div class="bottom">
                     <p id="our">OUR PHILOSOPHY</p>
                     <div class="text">
-                        <h1><span id="uppercase">Putting Our Clients' Success First</span></h1>
-                        <div class="Para"><p>At our agency, we firmly believe in putting our clients' success first. We are dedicated to understanding their unique goals, challenges, and vision, and we tailor our services to meet their specific needs. Our </p><P>collaborative approach ensures that our clients receive personalized attention, exceptional service, and measurable results, fostering long-term partnerships built on trust and mutual success.</P></div>
+                        <h1><span id="uppercase">Putting Our Clients' Success
+                                First</span></h1>
+                        <div class="Para"><p>At our agency, we firmly believe in
+                                putting our clients' success first. We are
+                                dedicated to understanding their unique goals,
+                                challenges, and vision, and we tailor our
+                                services to meet their specific needs. Our
+                            </p><p>collaborative approach ensures that our
+                                clients receive personalized attention,
+                                exceptional service, and measurable results,
+                                fostering long-term partnerships built on trust
+                                and mutual success.</p></div>
                     </div>
                 </section>
-                 <section class="view4">
-                <div class="top">
-                    <img
-                        src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbdadb9a66a436b50ff_sutdio-values-p-1600.webp">
-                </div>
-                <div class="bottom">
-                    <p id="our">OUR VISION</p>
-                    <div class="text">
-                        <h1><span id="uppercase">Setting the Standard for Excellence</span></h1>
-                        <div class="Para">
-                            <p>We are committed to setting the standard for excellence in everything we do. With a relentless pursuit of quality, innovation, and results, we strive to exceed expectations and deliver</p><p>exceptional outcomes for our clients. Our team of industry experts, combined with our unwavering dedication to excellence, positions us as a leader in the fashion agency landscape.</p> </div>
+                <section class="view4">
+                    <div class="top">
+                        <img
+                            src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbdadb9a66a436b50ff_sutdio-values-p-1600.webp">
                     </div>
-                </section>
-            </main>
-        </body>
-    </html>
+                    <div class="bottom">
+                        <p id="our">OUR VISION</p>
+                        <div class="text">
+                            <h1><span id="uppercase">Setting the Standard for
+                                    Excellence</span></h1>
+                            <div class="Para">
+                                <p>We are committed to setting the standard for
+                                    excellence in everything we do. With a
+                                    relentless pursuit of quality, innovation,
+                                    and results, we strive to exceed
+                                    expectations and deliver</p><p>exceptional
+                                    outcomes for our clients. Our team of
+                                    industry experts, combined with our
+                                    unwavering dedication to excellence,
+                                    positions us as a leader in the fashion
+                                    agency landscape.</p> </div>
+                        </div>
+                    </section>
+                    <section class="view5">
+                        <h1>Our team</h1>
+                    </section>
+                    <section class="view6">
+                     <div class="card">
+                        <div class="top">
+                           <div class="icon">
+                            <i class="ri-twitter-line"></i>
+                           </div>
+                           <div class="icon">
+                            <i class="ri-instagram-line"></i>
+                           </div>
+                           <div class="icon">
+                            <i class="ri-linkedin-line"></i>
+                           </div>
+                            <div class="bottom">
+                             <p>Arlene McCoy</p>
+                             <p>MARKETING</p>
+                            </div>
+                        </div>
+                     </div>
+                    </section>
+                </main>
+            </body>
+        </html>
