--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <h1>Our team</h1>
                     </section>
                     <section class="view6">
-                     <div class="card">
+                     <div class="card1">
                         <div class="top">
                            <div class="icon">
                             <i class="ri-twitter-line"></i>
@@ -112,11 +112,45 @@
                            <div class="icon">
                             <i class="ri-linkedin-line"></i>
                            </div>
+                           </div>
                             <div class="bottom">
                              <p>Arlene McCoy</p>
-                             <p>MARKETING</p>
-                            </div>
-                        </div>
+                             <p>BRANDING</p>
+                            </div>  
+                     </div>
+                      <div class="card2">
+                        <div class="top">
+                           <div class="icon">
+                            <i class="ri-twitter-line"></i>
+                           </div>
+                           <div class="icon">
+                            <i class="ri-instagram-line"></i>
+                           </div>
+                           <div class="icon">
+                            <i class="ri-linkedin-line"></i>
+                           </div>
+                           </div>
+                            <div class="bottom">
+                             <p>Bessie Cooper</p>
+                             <p>Marketing</p>
+                            </div>  
+                     </div>
+                      <div class="card3">
+                        <div class="top">
+                           <div class="icon">
+                            <i class="ri-twitter-line"></i>
+                           </div>
+                           <div class="icon">
+                            <i class="ri-instagram-line"></i>
+                           </div>
+                           <div class="icon">
+                            <i class="ri-linkedin-line"></i>
+                           </div>
+                           </div>
+                            <div class="bottom">
+                             <p>Marvin McKinney</p>
+                             <p>Video</p>
+                            </div>  
                      </div>
                     </section>
                 </main>
