Adding One more section

--- a/index.html
+++ b/index.html
@@ -153,6 +153,21 @@
                             </div>  
                      </div>
                     </section>
+                    <section class="view7">
+                <div class="top">
+                    <img
+                        src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd34d35c31355b73d1_studio-team-p-800.webp">
+                </div>
+                <div class="bottom">
+                    <p id="studio">JOIN OUR TEAM</p>
+                    <h1><span id="uppercase">Want to shape the future of Fashion?
+                                Stand Out</span></h1>
+                    <div class="text">
+                        <div class="flex"><span id="arrow"> &#8599;</span><span
+                                id="ourstory">FIND JOB</span></div>
+                    </div>
+                </div>
+            </section>
                 </main>
             </body>
         </html>
