--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
                         src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd34d35c31355b73d1_studio-team-p-800.webp">
                 </div>
                 <div class="bottom">
-                    <p id="studio">JOIN OUR TEAM</p>
-                    <h1><span id="uppercase">Want to shape the future of Fashion?
-                                Stand Out</span></h1>
+                    <p >JOIN OUR TEAM</p>
+                    <h1>Want to shape the future of Fashion?
+                                </h1>
                     <div class="text">
                         <div class="flex"><span id="arrow"> &#8599;</span><span
-                                id="ourstory">FIND JOB</span></div>
+                                id="Find-Job">FIND JOB</span></div>
                     </div>
                 </div>
             </section>
