--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         src="https://assets-global.website-files.com/63cffb7c16ab3347fc9734c8/63d2ccbd34d35c31355b73d1_studio-team-p-800.webp">
                 </div>
                 <div class="bottom">
-                    <p >JOIN OUR TEAM</p>
+                    <p id=our>JOIN OUR TEAM</p>
                     <h1>Want to shape the future of Fashion?
                                 </h1>
                     <div class="text">
@@ -167,6 +167,9 @@
                                 id="Find-Job">FIND JOB</span></div>
                     </div>
                 </div>
+            </section>
+            <section class="view8">
+                
             </section>
                 </main>
             </body>
