Make changes in section8

--- a/index.html
+++ b/index.html
@@ -169,7 +169,21 @@
                 </div>
             </section>
             <section class="view8">
-                
+                <div class="background">
+                <div class="top">
+                 <p id=contact>CONTACT</p>
+                 </div>
+                 <div class="bottom">   
+                    <h1>Let's make your fashion brand shine
+                                </h1>
+                    <div class="Button">
+                        <div class="btn"><button class="btnn"><span id="touch">GET IN TOUCH 
+                            <span>&#8599;</span> </span></button>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                </section>
             </section>
                 </main>
             </body>
