Improvement in section8

--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                  <p id=contact>CONTACT</p>
                  </div>
                  <div class="bottom">   
-                    <h1>Let's make your fashion brand shine
+                    <h1>Let's make your <br>fashion brand shine
                                 </h1>
                     <div class="Button">
                         <div class="btn"><button class="btnn"><span id="touch">GET IN TOUCH 
-                            <span>&#8599;</span> </span></button>
+                            <span id="arrow" >&#8599;</span> </span></button>
                         </div>
                     </div>
                 </div>
